[gd_scene load_steps=7 format=3 uid="uid://cbvqq5h4ae052"]

[ext_resource type="Script" uid="uid://c6ok3sfhf8abg" path="res://Components/Store/card_upgrade.gd" id="1_0g16j"]
[ext_resource type="Texture2D" uid="uid://bc1g4ncop4hd7" path="res://UITextures/CardUpgrades/card_upgrade.png" id="2_qagh1"]
[ext_resource type="Texture2D" uid="uid://br0hqqbj0u2vj" path="res://UITextures/Buttons/main_button.png" id="2_v3h2j"]
[ext_resource type="FontFile" uid="uid://chprskojxilgj" path="res://UITextures/Fonts/argentum-sans.black.ttf" id="3_c5lh7"]
[ext_resource type="Texture2D" uid="uid://1se5bq5gv7v4" path="res://UITextures/Icons/coins_icon.png" id="4_bt4pb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj2eg"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(8.7598e-06, 0.720236, 0.720236, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CardUpgrade" type="Control"]
custom_minimum_size = Vector2(150, 189)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 189.0
script = ExtResource("1_0g16j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cj2eg")

[node name="CardupgradeIcon" type="TextureRect" parent="Panel"]
custom_minimum_size = Vector2(91, 116)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 9.0
offset_right = 69.0
offset_bottom = 139.0
grow_horizontal = 2
texture = ExtResource("2_qagh1")
expand_mode = 1
stretch_mode = 5

[node name="BuyButton2" type="TextureButton" parent="Panel/CardupgradeIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -129.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
ignore_texture_size = true
stretch_mode = 0

[node name="Quantity" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.633333
anchor_top = 0.031746
anchor_right = 0.919996
anchor_bottom = 0.185185
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_c5lh7")
theme_override_font_sizes/font_size = 20
text = "20"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BuyButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -46.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_v3h2j")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BuyButton"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 128.0
offset_bottom = 32.0

[node name="Price" type="Label" parent="BuyButton/HBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_c5lh7")
theme_override_font_sizes/font_size = 15
text = "5000"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BuyButton/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_bt4pb")
expand_mode = 1
stretch_mode = 4
flip_h = true
